@@ -106,6 +106,7 @@ Dev Branch:
  - Implement DeviceID and Serial Number retrieval in ManufacturerSpecific CC (Justin)
  - Print out effective Options when starting the Driver (Justin)
  - Check the Controller Library Loaded, and dont' proceed if we don't support the Library when starting the Driver Class (Justin)
+ - SetNodeOn/Off/Level are depreciated and will be removed in 1.8 (Justin)
 
 Version 1.4
  - Released 10th Jan, 2016
